# modern-cpp-dev

./: .gitignore  Common.mk
01-concepts/: concepts.cpp  main.cpp  sfinae.cpp
02-replacing-polymorph/: after.cpp  before.cpp
03-intro-cmake/: CMakeLists.txt
03-intro-cmake/app/: CMakeLists.txt  main.cpp
03-intro-cmake/lib/: CMakeLists.txt  lib.cpp
03-intro-cmake/lib/include/lib/: lib.hpp
04-cmake-find-pkg/: CMakeLists.txt
05-cmake-fetch-content/: CMakeLists.txt  main.cpp
06-cpp-modules/: CMakeLists.txt  configure  main.cpp  other.cppm
07-ranges/: after.cpp  before.cpp
08-new-std/: README.md  main.cpp
